Fix horizontal overflow and update footer

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ img {
     grid: var(--logo-height) 1fr 2rem/ 1fr 5fr;
 
     background-color: black;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
@@ -186,10 +186,11 @@ footer {
     display: flex;
     background-color: var(--grey-light);
     border-left: rgb(217, 198, 198) 2px solid;
-    width: 15rem%;
+    width: 99%;
     flex-direction: column;
     gap: 10px;
     align-items: center;
+    padding-bottom: 20px;
 }
 
 #updates-panel>h2 {
@@ -198,6 +199,7 @@ footer {
     box-sizing: border-box;
     padding: 20px;
 }
+
 
 .update-content-widget {
     width: 80%;
@@ -230,4 +232,13 @@ footer {
 
 .current-page {
     color: rgba(255, 255, 255, 0.467);
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: var(--default-font);
+    color: aqua;
+    font-size: larger;
 }
